Implement order (#3)
